<resources>
    <string name="app_name">ProjectRepo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search"></string>

    <string name="menu_projects">@string/app_name</string>
    <string name="menu_engineering">Engineering</string>
    <string name="menu_fbms">FBMS</string>
    <string name="menu_fast">FAST</string>
    <string name="menu_health">FHAS</string>
    <string name="menu_built">FBNE</string>
    <string name="menu_downloads">Downloads</string>

    <string name="home_second">Home Second</string>

    <string name="action_skip">Skip</string>
    <!--Drawer layout items    -->
    <string name="projects">All Projects</string>
    <string name="faculty_engineering">Engineering</string>
    <string name="faculty_business_mgt_studies">Business/Mgt. Studies</string>
    <string name="faculty_applied_science_technology">Applied Science/Technology</string>
    <string name="faculty_health_allied_science">Health/Allied Science</string>
    <string name="faculty_built_natural_environment">Built/Natural Environment</string>
    <string name="downloads">Downloads</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>

    <!--    Others-->
    <string name="why_login">Why Login?</string>
    <string name="why_login_text">Registering with ProjectRepo saves any project
    you download so you don\'t have to re-download every time you login on our platform.</string>
    <string name="title_activity_engineering_proj">Engineering</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title1">Project Portal</string>
    <string name="intro_desc1">Access to all documentations of final year projects done by students of Koforidua Technical University</string>
    <string name="intro_title2">Great Community</string>
    <string name="intro_desc2">Sign in to join a bigger community of students and lecturers who are always ready to assist you</string>
    <string name="intro_title3">Synchronize</string>
    <string name="intro_desc3">ProjectRepo saves the details of any project you download in the cloud so you don\'t have to search for projects you already downloaded every time you login</string>
    <string name="file_downloading">Your file is being downloaded</string>
    <string name="download_file">Are you sure you want to download selected file?</string>
    <string name="download_string">Download File</string>
    <string name="name_purpose">KTU PROJECT WORK REPOSITORY</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="grant_storage_permission">Grant storage permission to download file.</string>

<!--    sendbird-->
    <string name="open_channel_list_participant_count">%1$d members online</string>
    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Channels</string>

    <string name="member_list">Member List</string>
    <string name="member_info"></string>
    <string name="participant_list">Participants</string>


    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Create channel</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>

    <!--    Upload activity-->
    <string name="project_title_hint">Project Title</string>
    <string name="project_year_hint">Project Year</string>
    <string name="submit_button">Submit Project</string>

    <!--    Faculties -->
    <string name="faculty_fast">Applied Science/Technology</string>
    <string name="faculty_fbms">Business/Management Studies</string>
    <string name="faculty_engine">Engineering</string>
    <string name="faculty_fbne">Built/Natural Environment</string>
    <string name="faculty_fhas">Health/Allied Sciences</string>


    <!--    Extras -->
    <string name="file_status">File name will appear here</string>
    <string name="fields_not_empty">Fields cannot be empty Or Invalid year</string>
    <string name="menu_search">Search</string>
    <string name="menu_upload_project">Upload Project</string>
    <string name="activity_upload">Upload Project</string>
    <string name="hint_index_format">Index (04/2016/1234D)</string>
    <string name="upload_project_activity">Upload Project</string>
    <string name="title_activity_upload_project">Upload Project</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="message_disclaimer">
        No student shall upload any file which is not related to the purpose for which this APP is created
        i.e. for academic project work purposes. Any student (user) found to be in breach of this shall be liable
        to face sever sanctions, including dismissal from the school
    </string>
    <string name="title_cannot_empty">Title Cannot be Empty</string>
    <string name="invalid_index_number">Invalid Index Number</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="all_fields_required">All Fields Required</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="permissions_required">Storage access permissions are required to download and upload files</string>
    <string name="upload_caution">Caution</string>
    <string name="upload_upload">Upload</string>
    <string name="upload_review">Review</string>
    <string name="upload_select_pdf">Select PDF</string>
    <string name="title_activity_about">About</string>

    <string name="project_description">
        Project Repo is a project documentation portal for final year projects of
        Koforidua Technical University Students. Project Repo gives you access to all final
        year projects both online and offline (downloadable) view
    </string>
    <string name="no_items_downloaded">No Items Downloaded</string>
    <string name="internet_needed">An internet connection is required to use this App</string>
    <string name="no_internet">No Internet</string>
    <string name="ok">OK</string>
    <string name="version_1_0_0_0">Version 1.0.0.0</string>
    <string name="more">Options</string>
    <string name="delete_file">Remove File</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="remove_file">File is Being Removed from List</string>
    <string name="cant_upload_file">File can\'t be uploaded</string>
    <string name="plagiarism_percent">%1$d\%</string>
</resources>
