<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_upload"
        android:title="@string/menu_upload_project"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signOut"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
</menu>
